2003-02-24  David N. Welton  <davidw@dedasys.com>

	* ftp.tcl (ftp::OpenControlConn): Use string map instead of
	regsub.

2003-01-28  David N. Welton  <davidw@dedasys.com>

	* ftp.tcl (ftp::InitDataConn): Use 'string match' instead of
	  regexp.

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ftp.man: More semantic markup, less visual one.

2002-08-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* examples (hpupdate.tcl): Updated 'info exist' to 'info exists'.

2002-08-21  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* ftpdemo.tcl (Examples): Changed ftp.tcl to ftpdemo.tcl in
	  [test_40afile] and [test_70append]. Problem found and reported
	  by Jussi Kuosa <Jussi.Kuosa@tellabs.com>.

2002-08-06  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* ftp.tcl: Fixed SF Bug #582668, reported by Frank Richter
	  <frari@users.sourceforge.net>.

2002-03-21  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* ftp.man: New, doctools manpage.

2002-02-14  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* ftp.tcl: Frink run.

	* ftp: Version is now 2.3.1 to distinguish this from the code in
	  tcllib release 1.2

2002-01-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ftp_geturl.tcl: Re-opened FR #476804 to add support for
	username and password and for non-unix based FTP servers.

2002-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version to 2.3

2002-01-16  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* ftp.tcl: Fix for bug #503471. The commands Get, Reget, and Newer
	  now check if the directory the local file is to be placed in
	  does exist. They now immediately throw an error if the directory
	  does not exist instead of starting the download and getting
	  confused.

	* ftp.n: Typo fix. Updates in the descriptions of Get, Reget, and
	  Newer explaining the new behaviour, s.a.

2001-11-20  Joe English <jenglish@users.sourceforge.net>
