@@ -1,3 +1,7 @@
+2003-03-18  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* ftp.tcl (ftp::InitDataConn): revert -regexp to fix bug 701288.
+
 2003-02-24  David N. Welton  <davidw@dedasys.com>
 
 	* ftp.tcl (ftp::OpenControlConn): Use string map instead of
